clang/test/BSC/Negative/SafeZone/borrow_check_point/borrow_check_point.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

const int *_Borrow g_b = (const int *_Borrow)(void *)0;    // expected-error {{type of global variable cannot qualified by '_Borrow'}}
int * _Borrow g_d = (int *_Borrow)(void *)0;               // expected-error {{type of global variable cannot qualified by '_Borrow'}}
typedef int * _Borrow typeborrow;
typeborrow g_g = (int *_Borrow)(void *)0;                 // expected-error {{type of global variable cannot qualified by '_Borrow', 'typeborrow' (aka 'int *_Borrow') contains '_Borrow' type}}
typedef const int * _Borrow consteborrow;
consteborrow g_h = (const int *_Borrow)(void *)0;         // expected-error {{type of global variable cannot qualified by '_Borrow', 'consteborrow' (aka 'const int *_Borrow') contains '_Borrow' type}}

int g_e;
int g_f;
_Safe void test_1(void) {
    const int * _Borrow a = &_Const g_e;
    int * _Borrow b = &_Mut g_f;                  // expected-error {{global or static variables are not allowed to be mutably borrowed within the safe zone}}
}

void test_2(void) {
    int t_a = 1;
    int *_Owned t_b = __take_from_raw(&t_a);
    int t_c = 1;
    int *_Owned t_d = __take_from_raw(&t_c);
    int t_g;
    int *t_e = &t_g;
    int *t_f = &t_g;

    _Safe {
        int c = 1;
        const int * _Borrow d= &_Const c;
        int e = 1;
        int * _Borrow f = &_Mut e;
        const int * _Borrow g = &_Const *t_e;      // expected-error {{'*' operator is forbidden in the safe zone}}
        int * _Borrow h = &_Mut *t_f;              // expected-error {{'*' operator is forbidden in the safe zone}}
        const int * _Borrow i = &_Const *d;
        int * _Borrow j = &_Mut *f;
        int * _Borrow k = &_Mut *t_b;
        const int * _Borrow l = &_Const *t_d;
    }

    int c = 1;
    const int * _Borrow d= &_Const c;
   
    int e = 1;
    int * _Borrow f = &_Mut e;
    const int * _Borrow g = &_Const *f;
    int * _Borrow h = &_Mut *f;

    const int * _Borrow i = &_Const *d;
    int * _Borrow j = &_Mut *f;
    int * _Borrow k = &_Mut *t_b;
    const int * _Borrow l = &_Const *t_d;
}

void test_3(void) {
    int t_a = 1;
    int * t_b = &t_a;
    _Safe {
        // _Owned point <-> raw point 
        int * _Owned a = (int * _Owned)t_b;   // expected-error {{conversion from type 'int *' to 'int *_Owned' is forbidden in the safe zone}}
        int * b = (int *)a;                 // expected-error {{conversion from type 'int *_Owned' to 'int *' is forbidden in the safe zone}}
        int * _Owned c = t_b;                // expected-error {{conversion from type 'int *' to 'int *_Owned' is forbidden in the safe zone}}
        int * d = c;                        // expected-error {{conversion from type 'int *_Owned' to 'int *' is forbidden in the safe zone}}
    }

    int t_c = 1;
    int * _Owned t_d = __take_from_raw(&t_c);
    int t_e = 1;
    int * _Borrow t_f = &_Mut t_e;
    int t_g = 1;
    const int * _Borrow t_h = &_Const t_g;
    _Safe {
        // _Owned point <-> _Borrow point
        int * _Owned a = (int * _Owned)t_f;               // expected-error {{conversion from type 'int *_Borrow' to 'int *_Owned' is forbidden in the safe zone}}
        int * _Owned b = (int * _Owned)t_h;               // expected-error {{conversion from type 'const int *_Borrow' to 'int *_Owned' is forbidden in the safe zone}}
        int * _Borrow c = (int * _Borrow)a;               // expected-error {{conversion from type 'int *_Owned' to 'int *_Borrow' is forbidden in the safe zone}}
        const int * _Borrow d = (const int * _Borrow)b;   // expected-error {{conversion from type 'int *_Owned' to 'const int *_Borrow' is forbidden in the safe zone}}

        int * _Owned e = t_f;                            // expected-error {{conversion from type 'int *_Borrow' to 'int *_Owned' is forbidden in the safe zone}}
        int * _Owned f = t_h;                            // expected-error {{conversion from type 'const int *_Borrow' to 'int *_Owned' is forbidden in the safe zone}}
        int * _Borrow g = e;                             // expected-error {{conversion from type 'int *_Owned' to 'int *_Borrow' is forbidden in the safe zone}}
        const int * _Borrow h = f;                       // expected-error {{conversion from type 'int *_Owned' to 'const int *_Borrow' is forbidden in the safe zone}}
    }

    int t_i = 1;
    int * t_j = &t_i;
    int t_k = 1;
    int * t_l = &t_k;
    _Safe {
        // _Borrow point <-> raw point 
        int * _Borrow a = (int * _Borrow)t_j;                  // expected-error {{conversion from type 'int *' to 'int *_Borrow' is forbidden in the safe zone}}
        const int * _Borrow b = (const int * _Borrow)t_l;      // expected-error {{conversion from type 'int *' to 'const int *_Borrow' is forbidden in the safe zone}}
        int *c = (int *)a;                                   // expected-error {{conversion from type 'int *_Borrow' to 'int *' is forbidden in the safe zone}}
        int *d = (int *)b;                                   // expected-error {{conversion from type 'const int *_Borrow' to 'int *' is forbidden in the safe zone}}

        int * _Borrow e = t_j;                                // expected-error {{conversion from type 'int *' to 'int *_Borrow' is forbidden in the safe zone}}
        const int * _Borrow f = (const int * _Borrow)t_l;      // expected-error {{conversion from type 'int *' to 'const int *_Borrow' is forbidden in the safe zone}}
        int * g = e;                                         // expected-error {{conversion from type 'int *_Borrow' to 'int *' is forbidden in the safe zone}}
        int * h = f;                                         // expected-error {{conversion from type 'const int *_Borrow' to 'int *' is forbidden in the safe zone}}
    }
}

struct s_a {
    int a;
};

void test_4(void) {
    struct s_a b = {1};
    struct s_a *c = &b;
    
    struct s_a e = {1};   
    struct s_a * _Owned f = __take_from_raw(&e);

    struct s_a h = {1};
    struct s_a * _Borrow i = &_Mut h;

    struct s_a k = {1};
    struct s_a * _Borrow l = &_Mut k;

    _Safe {
        int a = c->a;         // expected-error {{'->' operator used by raw pointer type is forbidden in the safe zone}}
        int b = f->a;
        int c = i->a;
        int d = l->a;
    }
}

_Safe int * _Borrow test_5(int * _Borrow a) {
    return a;
}

_Safe const int * _Borrow test_6(const int * _Borrow a) {
    return a;
}
